--- a/app/src/main/res/layout/activity_super.xml
+++ b/app/src/main/res/layout/activity_super.xml
@@ -7,7 +7,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="203dp"
-        android:id="@+id/cardView"
+        android:id="@+id/cardViewSuper"
         android:layout_weight="0.90">
 
         <RelativeLayout
@@ -38,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/super_address"
-                android:layout_toRightOf="@+id/person_photo"
+                android:layout_toRightOf="@+id/super_photo"
                 android:layout_below="@+id/super_name"
                 />
 
