--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -16,7 +16,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/super_photo"
+            android:id="@+id/item_photo"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginRight="10dp"
@@ -25,8 +25,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/super_name"
-            android:layout_toRightOf="@+id/super_photo"
+            android:id="@+id/item_name"
+            android:layout_toRightOf="@+id/item_photo"
             android:layout_alignParentTop="true"
             android:textSize="30sp"
             />
@@ -34,9 +34,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/super_address"
-            android:layout_below="@+id/super_name"
-            android:layout_toRightOf="@+id/super_photo"
+            android:id="@+id/item_address"
+            android:layout_below="@+id/item_name"
+            android:layout_toRightOf="@+id/item_photo"
             />
 
     </RelativeLayout>
