Layout store Info creada (per arreglar)

--- a/app/src/main/res/layout/activity_store_info.xml
+++ b/app/src/main/res/layout/activity_store_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_store_info"
     android:layout_width="match_parent"
@@ -13,9 +14,8 @@
         android:weightSum="1">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="350px"
+            android:layout_height="255dp"
             android:orientation="vertical"
-            android:background="@color/colorPrimary"
             android:weightSum="1">
 
             <TextView
@@ -29,21 +29,29 @@
                 android:layout_weight="0.32"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/carniceria"
+                android:scaleType="centerCrop"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/imageView" />
         </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            android:layout_weight="0.04">
+            android:layout_weight="0.04"
+            android:layout_marginTop="5dp">
 
             <RelativeLayout
                 android:layout_height="match_parent"
-                android:layout_width="190dp"
-                android:background="#64b5f6">
+                android:layout_width="wrap_content"
+                android:layout_weight="1">
 
                 <TextView
-                    android:text="30"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="30dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -55,7 +63,7 @@
                 <TextView
                     android:text="Torn actual"
                     android:textStyle="bold"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/colorPrimary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/actualTurnText"
@@ -66,13 +74,12 @@
 
             <RelativeLayout
                 android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:background="#ea80fc">
+                android:layout_width="wrap_content"
+                android:layout_weight="1">
 
                 <TextView
-                    android:text="40"
                     android:textSize="30dp"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/colorPrimary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/disponibleTurn"
@@ -82,7 +89,7 @@
 
                 <TextView
                     android:text="Torn disponible"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/colorPrimary"
                     android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -93,9 +100,93 @@
             </RelativeLayout>
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="113dp"
+            android:orientation="horizontal">
+
+            <RelativeLayout android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_weight="1">
+
+                <TextView
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="24sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/queue"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="22dp" />
+
+                <TextView
+                    android:text="Cua"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/queueText"
+                    android:textStyle="bold"
+                    android:layout_above="@+id/queue"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_marginTop="18dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignLeft="@+id/queue"
+                    android:layout_alignStart="@+id/queue" />
+            </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:textColor="@color/colorPrimary"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/aproxTime"
+                        android:textSize="24sp"
+                        android:layout_marginBottom="22dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerHorizontal="true" />
+
+                    <TextView
+                        android:text="Temps aproximat"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/aproxTimeText"
+                        android:textStyle="bold"
+                        android:layout_marginTop="18dp"
+                        android:layout_alignParentTop="true"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_above="@+id/aproxTime"
+                        android:layout_alignRight="@+id/aproxTime"
+                        android:layout_alignEnd="@+id/aproxTime" />
+
+                </RelativeLayout>
+
+
+
+
+
+        </LinearLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <Button
+                android:text="Demana torn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/getTurnBtn"
+                android:padding="5dp"
+                android:textColor="@android:color/white"
+                android:background="@color/colorPrimary"
+                android:layout_marginRight="12dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginTop="23dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
 
         </RelativeLayout>
 
