--- a/app/src/main/res/layout/activity_store_info.xml
+++ b/app/src/main/res/layout/activity_store_info.xml
@@ -14,7 +14,7 @@
         android:weightSum="1">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="255dp"
+            android:layout_height="206dp"
             android:orientation="vertical"
             android:weightSum="1">
 
@@ -41,9 +41,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_weight="0.04"
-            android:layout_marginTop="5dp">
+            android:layout_height="88dp"
+            android:layout_marginTop="20px">
 
             <RelativeLayout
                 android:layout_height="match_parent"
@@ -68,8 +67,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/actualTurnText"
                     android:layout_above="@+id/actualTurn"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="18dp" />
+                    android:layout_centerHorizontal="true" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -94,7 +92,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/disponibleTurnText"
-                    android:layout_marginBottom="18dp"
                     android:layout_above="@+id/disponibleTurn"
                     android:layout_centerHorizontal="true" />
             </RelativeLayout>
@@ -102,8 +99,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="113dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_height="110dp">
 
             <RelativeLayout android:layout_height="match_parent"
                 android:layout_width="wrap_content"
