--- a/app/src/main/res/layout/activity_store_info.xml
+++ b/app/src/main/res/layout/activity_store_info.xml
@@ -12,173 +12,136 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="1">
+
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="206dp"
+            android:layout_height="220dp"
             android:orientation="vertical"
             android:weightSum="1">
 
             <TextView
-                android:text="Carniceria01"
-                android:textStyle="bold"
-                android:layout_width="123dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="@android:color/white"
-                android:id="@+id/storeName"
-                android:layout_weight="0.32"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true" />
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:srcCompat="@drawable/carniceria"
-                android:scaleType="centerCrop"
+                android:id="@+id/disponibleTurn"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:id="@+id/imageView" />
+                android:layout_marginTop="39dp"
+                android:background="@drawable/disponible_turn_design"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="30"
+                android:textColor="@android:color/white"
+                android:textSize="50sp"></TextView>
+
+            <TextView
+                android:id="@+id/disponibleTurnText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/disponibleTurn"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="16dp"
+                android:text="TORN DISPONIBLE" />
+
         </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="88dp"
-            android:layout_marginTop="20px">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-
-                <TextView
-                    android:id="@+id/actualTurn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="22dp"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="30dp" />
-
-                <TextView
-                    android:id="@+id/actualTurnText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_above="@+id/actualTurn"
-                    android:layout_centerHorizontal="true"
-                    android:text="Torn actual"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <TextView
-                    android:id="@+id/disponibleTurn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="30dp" />
-
-                <TextView
-                    android:id="@+id/disponibleTurnText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Torn disponible"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="8dp" />
-            </RelativeLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_height="110dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-
-                <TextView
-                    android:id="@+id/queue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="24sp" />
-
-                <TextView
-                    android:id="@+id/queueText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="16dp"
-                    android:text="Cua"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <TextView
-                    android:id="@+id/aproxTime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="24sp" />
-
-                <TextView
-                    android:id="@+id/aproxTimeText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Temps aproximat"
-                    android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="16dp" />
-
-            </RelativeLayout>
-
-
-
-
-
-        </LinearLayout>
+        <View
+            android:layout_width="264dp"
+            android:layout_height="1dp"
+            android:layout_marginLeft="60dp"
+            android:background="@android:color/darker_gray"></View>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <Button
-                android:text="Demana torn"
+            <TextView
+                android:id="@+id/actualTurn"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/actual_turn_design"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="20"
+                android:textColor="@android:color/white"
+                android:textSize="30sp"></TextView>
+
+            <TextView
+                android:id="@+id/actualTurnText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/actualTurn"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="22dp"
+                android:text="TORN ACTUAL" />
+
+            <TextView
+                android:id="@+id/queueText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cua per davant"
+                android:layout_marginBottom="22dp"
+                android:layout_above="@+id/getTurnBtn"
+                android:layout_alignLeft="@+id/imageView2"
+                android:layout_alignStart="@+id/imageView2" />
+
+            <TextView
+                android:id="@+id/queue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10 torns"
+                android:layout_marginLeft="5dp"
+                android:layout_alignBaseline="@+id/queueText"
+                android:layout_alignBottom="@+id/queueText"
+                android:layout_toRightOf="@+id/queueText"
+                android:layout_toEndOf="@+id/queueText" />
+
+            <android.support.design.widget.FloatingActionButton
                 android:id="@+id/getTurnBtn"
-                android:padding="5dp"
-                android:textColor="@android:color/white"
-                android:background="@color/colorPrimary"
-                android:layout_marginRight="13dp"
-                android:layout_marginEnd="13dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginBottom="11dp" />
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="14dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginRight="12dp"
+                android:clickable="true"
+                android:tint="@android:color/white"
+                app:fabSize="mini"
+                app:rippleColor="@android:color/white"
+                app:srcCompat="@mipmap/ic_turned_in_black_24dp" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_access_time_black_24dp"
+                android:layout_alignBottom="@+id/getTurnBtn"
+                android:layout_toLeftOf="@+id/actualTurnText"
+                android:layout_toStartOf="@+id/actualTurnText" />
+
+            <TextView
+                android:id="@+id/timeText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TEMPS"
+                android:layout_alignBottom="@+id/imageView2"
+                android:layout_toRightOf="@+id/imageView2"
+                android:layout_toEndOf="@+id/imageView2"
+                android:layout_marginLeft="11dp"
+                android:layout_marginStart="11dp" />
+
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/timeText"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@+id/timeText"
+                android:layout_toRightOf="@+id/timeText"
+                android:text="10 Minuts" />
 
         </RelativeLayout>
 
