--- a/app/src/main/res/layout/activity_store_info.xml
+++ b/app/src/main/res/layout/activity_store_info.xml
@@ -1,151 +1,200 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_store_info"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.admin.e_torn.StoreInfoActivity">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="1">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="220dp"
-            android:orientation="vertical"
-            android:weightSum="1">
-
-            <TextView
-                android:id="@+id/disponibleTurn"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="39dp"
-                android:background="@drawable/disponible_turn_design"
-                android:gravity="center_vertical|center_horizontal"
-                android:text="30"
-                android:textColor="@android:color/white"
-                android:textSize="50sp"></TextView>
-
-            <TextView
-                android:id="@+id/disponibleTurnText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/disponibleTurn"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="16dp"
-                android:text="TORN DISPONIBLE" />
-
-        </RelativeLayout>
-
-        <View
-            android:layout_width="264dp"
-            android:layout_height="1dp"
-            android:layout_marginLeft="60dp"
-            android:background="@android:color/darker_gray"></View>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/actualTurn"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="24dp"
-                android:background="@drawable/actual_turn_design"
-                android:gravity="center_vertical|center_horizontal"
-                android:text="20"
-                android:textColor="@android:color/white"
-                android:textSize="30sp"></TextView>
-
-            <TextView
-                android:id="@+id/actualTurnText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/actualTurn"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="22dp"
-                android:text="TORN ACTUAL" />
-
-            <TextView
-                android:id="@+id/queueText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cua per davant"
-                android:layout_marginBottom="22dp"
-                android:layout_above="@+id/getTurnBtn"
-                android:layout_alignLeft="@+id/imageView2"
-                android:layout_alignStart="@+id/imageView2" />
-
-            <TextView
-                android:id="@+id/queue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10 torns"
-                android:layout_marginLeft="5dp"
-                android:layout_alignBaseline="@+id/queueText"
-                android:layout_alignBottom="@+id/queueText"
-                android:layout_toRightOf="@+id/queueText"
-                android:layout_toEndOf="@+id/queueText" />
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/getTurnBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginBottom="14dp"
-                android:layout_marginEnd="12dp"
-                android:layout_marginRight="12dp"
-                android:clickable="true"
-                android:tint="@android:color/white"
-                app:fabSize="mini"
-                app:rippleColor="@android:color/white"
-                app:srcCompat="@mipmap/ic_turned_in_black_24dp" />
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@mipmap/ic_access_time_black_24dp"
-                android:layout_alignBottom="@+id/getTurnBtn"
-                android:layout_toLeftOf="@+id/actualTurnText"
-                android:layout_toStartOf="@+id/actualTurnText" />
-
-            <TextView
-                android:id="@+id/timeText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TEMPS"
-                android:layout_alignBottom="@+id/imageView2"
-                android:layout_toRightOf="@+id/imageView2"
-                android:layout_toEndOf="@+id/imageView2"
-                android:layout_marginLeft="11dp"
-                android:layout_marginStart="11dp" />
-
-            <TextView
-                android:id="@+id/time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/timeText"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_toEndOf="@+id/timeText"
-                android:layout_toRightOf="@+id/timeText"
-                android:text="10 Minuts" />
-
-        </RelativeLayout>
+    tools:context="com.example.admin.e_torn.StoreInfoActivity"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
 
 
-    </LinearLayout>
+    <TextView
+        android:id="@+id/disponibleTurn"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@drawable/disponible_turn_design"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="30"
+        android:textColor="@android:color/white"
+        android:textSize="50sp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="24dp" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/actualTurnText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="24dp"
+        android:text="TORN ACTUAL"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/disponibleTurn"
+        tools:layout_conversion_absoluteHeight="16dp"
+        tools:layout_conversion_absoluteWidth="92dp"
+        tools:layout_conversion_absoluteX="146dp"
+        tools:layout_conversion_absoluteY="367dp" />
+
+    <View
+        android:id="@+id/view2"
+        android:layout_width="264dp"
+        android:layout_height="1dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="24dp"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/actualTurnText"
+        tools:layout_conversion_absoluteHeight="1dp"
+        tools:layout_conversion_absoluteWidth="264dp"
+        tools:layout_conversion_absoluteX="60dp"
+        tools:layout_conversion_absoluteY="220dp" />
+
+
+    <TextView
+        android:id="@+id/actualTurn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/actual_turn_design"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="20"
+        android:textColor="@android:color/white"
+        android:textSize="30sp"
+        tools:layout_conversion_absoluteX="142dp"
+        tools:layout_conversion_absoluteY="245dp"
+        tools:layout_conversion_absoluteWidth="100dp"
+        tools:layout_conversion_absoluteHeight="100dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/view2"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/disponibleTurnText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="24dp"
+        android:text="TORN DISPONIBLE"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/actualTurn"
+        tools:layout_conversion_absoluteHeight="16dp"
+        tools:layout_conversion_absoluteWidth="116dp"
+        tools:layout_conversion_absoluteX="133dp"
+        tools:layout_conversion_absoluteY="185dp" />
+
+    <TextView
+        android:id="@+id/timeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="0dp"
+        android:text="TEMPS"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/time"
+        tools:layout_conversion_absoluteHeight="16dp"
+        tools:layout_conversion_absoluteWidth="45dp"
+        tools:layout_conversion_absoluteX="157dp"
+        tools:layout_conversion_absoluteY="480dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/disponibleTurnText" />
+
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="9dp"
+        android:layout_marginRight="8dp"
+        android:text="10 Minuts"
+        app:layout_constraintLeft_toRightOf="@+id/timeText"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_conversion_absoluteHeight="16dp"
+        tools:layout_conversion_absoluteWidth="61dp"
+        tools:layout_conversion_absoluteX="212dp"
+        tools:layout_conversion_absoluteY="480dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/timeText" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/queueText"
+        app:layout_constraintTop_toBottomOf="@+id/timeText"
+        app:srcCompat="@mipmap/ic_access_time_black_24dp"
+        tools:layout_conversion_absoluteHeight="24dp"
+        tools:layout_conversion_absoluteWidth="24dp"
+        tools:layout_conversion_absoluteX="122dp"
+        tools:layout_conversion_absoluteY="473dp" />
+
+    <TextView
+        android:id="@+id/queueText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cua per davant"
+        app:layout_constraintLeft_toRightOf="@+id/imageView2"
+        app:layout_constraintRight_toLeftOf="@+id/queue"
+        tools:layout_conversion_absoluteHeight="16dp"
+        tools:layout_conversion_absoluteWidth="94dp"
+        tools:layout_conversion_absoluteX="122dp"
+        tools:layout_conversion_absoluteY="418dp"
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        android:layout_marginTop="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+        android:layout_marginBottom="0dp" />
+
+    <TextView
+        android:id="@+id/queue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10 torns"
+        app:layout_constraintLeft_toRightOf="@+id/queueText"
+        tools:layout_conversion_absoluteHeight="16dp"
+        tools:layout_conversion_absoluteWidth="52dp"
+        tools:layout_conversion_absoluteX="221dp"
+        tools:layout_conversion_absoluteY="418dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/queueText" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/getTurnBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:tint="@android:color/white"
+        app:fabSize="mini"
+        app:rippleColor="@android:color/white"
+        app:srcCompat="@mipmap/ic_turned_in_black_24dp"
+        tools:layout_conversion_absoluteHeight="40dp"
+        tools:layout_conversion_absoluteWidth="40dp"
+        tools:layout_conversion_absoluteX="332dp"
+        tools:layout_conversion_absoluteY="457dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp" />
+
+
+</android.support.constraint.ConstraintLayout>
