--- a/app/src/main/res/layout/activity_store_info.xml
+++ b/app/src/main/res/layout/activity_store_info.xml
@@ -168,33 +168,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="10 torns"
-        app:layout_constraintLeft_toRightOf="@+id/queueText"
         tools:layout_conversion_absoluteHeight="16dp"
         tools:layout_conversion_absoluteWidth="52dp"
         tools:layout_conversion_absoluteX="221dp"
         tools:layout_conversion_absoluteY="418dp"
-        android:layout_marginLeft="0dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/queueText" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/queueText"
+        app:layout_constraintLeft_toLeftOf="@+id/queueText" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/getTurnBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="16dp"
         android:clickable="true"
         android:tint="@android:color/white"
-        app:fabSize="mini"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:rippleColor="@android:color/white"
         app:srcCompat="@mipmap/ic_turned_in_black_24dp"
         tools:layout_conversion_absoluteHeight="40dp"
         tools:layout_conversion_absoluteWidth="40dp"
         tools:layout_conversion_absoluteX="332dp"
-        tools:layout_conversion_absoluteY="457dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        tools:layout_conversion_absoluteY="457dp" />
 
 
 </android.support.constraint.ConstraintLayout>
