--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/cardView"
+    android:id="@+id/cardViewStore"
     android:layout_margin="10dp"
     >
 
@@ -13,20 +13,10 @@
         android:padding="16dp"
         >
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/item_photo"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginRight="10dp"
-            />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/item_name"
-            android:layout_toRightOf="@+id/item_photo"
             android:layout_alignParentTop="true"
             android:textSize="30sp"
 
@@ -35,9 +25,17 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/item_address"
+            android:id="@+id/item_city"
             android:layout_below="@+id/item_name"
-            android:layout_toRightOf="@+id/item_photo"
+            android:layout_marginLeft="2px"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/item_distance"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
             />
 
     </RelativeLayout>
