--- a/app/src/main/res/layout/super_item.xml
+++ b/app/src/main/res/layout/super_item.xml
@@ -17,14 +17,16 @@
         <TextView
             android:id="@+id/item_name"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
+            android:layout_height="69dp"
+            android:layout_marginEnd="16dp"
 
+            android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="Name"
             android:textSize="24sp"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/item_distance"
             app:layout_constraintTop_toTopOf="parent" />
@@ -34,8 +36,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
+            android:layout_marginLeft="1dp"
             android:layout_marginStart="1dp"
             android:layout_marginTop="8dp"
             android:text="City"
@@ -50,12 +51,12 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginRight="16dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="Distance"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="16dp" />
 
     </android.support.constraint.ConstraintLayout>
 
