Temps aproximat inicial implementat a storeActivity  Informacio del temps amagada quan Caesar retorna 0

--- a/app/src/main/res/layout/store_item.xml
+++ b/app/src/main/res/layout/store_item.xml
@@ -32,7 +32,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/time_icon"
+            android:id="@+id/timeIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
@@ -54,10 +54,10 @@
             android:layout_marginRight="0dp"
             android:layout_marginTop="0dp"
             android:text="3 minuts"
-            app:layout_constraintBottom_toBottomOf="@+id/time_icon"
-            app:layout_constraintLeft_toRightOf="@+id/time_icon"
+            app:layout_constraintBottom_toBottomOf="@+id/timeIcon"
+            app:layout_constraintLeft_toRightOf="@+id/timeIcon"
             app:layout_constraintRight_toRightOf="@+id/item_store_name"
-            app:layout_constraintTop_toTopOf="@+id/time_icon" />
+            app:layout_constraintTop_toTopOf="@+id/timeIcon" />
 
         <View
             android:id="@+id/item_separator"
@@ -69,7 +69,7 @@
             android:background="@android:color/darker_gray"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/time_icon" />
+            app:layout_constraintTop_toBottomOf="@+id/timeIcon" />
 
 
         <View
