--- a/app/src/main/res/layout/activity_store_info.xml
+++ b/app/src/main/res/layout/activity_store_info.xml
@@ -107,7 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="8dp"
         android:text="10 Minuts"
-        app:layout_constraintLeft_toRightOf="@+id/imageView2"
+        app:layout_constraintLeft_toRightOf="@+id/timeIcon"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_conversion_absoluteHeight="16dp"
         tools:layout_conversion_absoluteWidth="61dp"
@@ -117,7 +117,7 @@
         app:layout_constraintTop_toBottomOf="@+id/actualTurnText" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/timeIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="4dp"
